<resources>
    <string name="app_name">Lugares</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="tv_nombre">Nombre</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lugar">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_nombre">Nombre del Lugar</string>
    <string name="msg_correo">Correo (xxxx@xxxx.xxxd</string>
    <string name="msg_telefono">Telefono (9999-9999)</string>
    <string name="msg_imagen">Imagen del Lugar</string>
    <string name="msg_web">Sitio Web</string>
    <string name="bt_agregar">Agregar</string>

    <string name="bt_actualizar">Actualizar</string>
    <string name="ms_faltaValores">Faltan valores para ingresar</string>
    <string name="ms_UpdateLugar">Lugar Actualizado</string>

    <string name="todo">TODO</string>
    <string name="msgEscucharAudio">Escuchando Audio</string>

    <string name="msgInicioNotaAudio">Grabando Audio</string>
    <string name="msgDetieneNotaAudio">Detiene Audio</string>
    <string name="msgSubiendo">Subiendo los archivos</string>
    <string name="si">Si</string>
    <string name="deleted">Borrar</string>
    <string name="seguroDeBorrar">Estás seguro que quieres borrar?</string>
    <string name="no">No</string>

</resources>