<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateLugarFragment">

    <EditText
        android:id="@+id/et_nombre3"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/msg_nombre" />

    <EditText
        android:id="@+id/et_correo3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/msg_correo" />

    <EditText
        android:id="@+id/et_web3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/msg_web" />

    <EditText
        android:id="@+id/et_telefono3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/msg_telefono" />

    <Button
        android:id="@+id/bt_actualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bt_actualizar" />

    <ImageButton
        android:id="@+id/btPlay"
        android:layout_width="373dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:contentDescription="@string/msgEscucharAudio"
        android:src="@drawable/ic_play" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="wrap_content"
        android:layout_height="380dp"
        android:contentDescription="@string/msg_imagen"
        android:scaleType="centerInside"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/backgrounds/scenic" />
</LinearLayout>